--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -34,9 +34,9 @@
             max-width: 100%;
         }
         input{
-            width: 100%;
+            width: 99%;
             height: 60px;
-            /* border: none; */
+            border: none;
             font-size: 30px;
             outline: none;
             text-align: right;
@@ -44,6 +44,21 @@
         .input{
             grid-column: 1/-1;
             padding: 0;
+        }
+        .clean{
+            grid-column: 1/3;
+            background-color: rgb(127, 154, 235);
+        }
+        .del{
+            grid-column: 3/-1;
+        }
+        .equal{
+            grid-column: 4;
+            grid-row: 6/8;
+            /* background-color: ; */
+        }
+        .zero{
+            grid-column: 1/3;
         }
     </style>
 </head>
@@ -56,10 +71,10 @@
         </div>
         <div class="item clean">C</div>
         <div class="item del">Del</div>
-        <div class="item">+</div>
-        <div class="item">-</div>
-        <div class="item">*</div>
-        <div class="item">/</div>
+        <div class="item" onclick="insert('+')">+</div>
+        <div class="item" onclick="insert('-')">-</div>
+        <div class="item" onclick="insert('*')">*</div>
+        <div class="item" onclick="insert('/')">/</div>
         <div class="item">7</div>
         <div class="item">8</div>
         <div class="item">9</div>
@@ -75,5 +90,7 @@
         <div class="item zero">0</div>
         <div class="item">.</div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
