--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="item input">
             <form name="form">
-                <input type="text" name="textView" readonly>
+                <input id="textfield" type="text" name="textView">
             </form>
         </div>
         <div class="item clean">C</div>
