--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -19,6 +19,7 @@
             border-radius: 7px;
             max-width: 360px;
             font-family: Georgia, 'Times New Roman', Times, serif;
+            margin: 0 auto;
         }
         .item{
             background-color: #b3f5fc;
@@ -69,26 +70,26 @@
                 <input id="textfield" type="text" name="textView">
             </form>
         </div>
-        <div class="item clean">C</div>
-        <div class="item del">Del</div>
+        <div class="item clean" onclick="clean()">C</div>
+        <div class="item del" onclick="del()">Del</div>
         <div class="item" onclick="insert('+')">+</div>
         <div class="item" onclick="insert('-')">-</div>
         <div class="item" onclick="insert('*')">*</div>
         <div class="item" onclick="insert('/')">/</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-        <div class="item">9</div>
-        <div class="item">(</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item">)</div>
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item equal">=</div>
-        <div class="item zero">0</div>
-        <div class="item">.</div>
+        <div class="item" onclick="insert('7')">7</div>
+        <div class="item" onclick="insert('8')">8</div>
+        <div class="item" onclick="insert('9')">9</div>
+        <div class="item" onclick="insert('(')">(</div>
+        <div class="item" onclick="insert('4')">4</div>
+        <div class="item" onclick="insert('5')">5</div>
+        <div class="item" onclick="insert('6')">6</div>
+        <div class="item" onclick="insert(')')">)</div>
+        <div class="item" onclick="insert('1')">1</div>
+        <div class="item" onclick="insert('2')">2</div>
+        <div class="item" onclick="insert('3')">3</div>
+        <div class="item equal" onclick="equal()">=</div>
+        <div class="item zero" onclick="insert('0')">0</div>
+        <div class="item" onclick="insert('.')">.</div>
     </div>
 
     <script src="script.js"></script>
