--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -70,26 +70,26 @@
                 <input id="textfield" type="text" name="textView">
             </form>
         </div>
-        <div class="item clean" onclick="clean()">C</div>
-        <div class="item del" onclick="del()">Del</div>
-        <div class="item" onclick="insert('+')">+</div>
-        <div class="item" onclick="insert('-')">-</div>
-        <div class="item" onclick="insert('*')">*</div>
-        <div class="item" onclick="insert('/')">/</div>
-        <div class="item" onclick="insert('7')">7</div>
-        <div class="item" onclick="insert('8')">8</div>
-        <div class="item" onclick="insert('9')">9</div>
-        <div class="item" onclick="insert('(')">(</div>
-        <div class="item" onclick="insert('4')">4</div>
-        <div class="item" onclick="insert('5')">5</div>
-        <div class="item" onclick="insert('6')">6</div>
-        <div class="item" onclick="insert(')')">)</div>
-        <div class="item" onclick="insert('1')">1</div>
-        <div class="item" onclick="insert('2')">2</div>
-        <div class="item" onclick="insert('3')">3</div>
+        <div class="item clean key-backspace" onclick="clean()">C</div>
+        <div class="item del key-del" onclick="del()">Del</div>
+        <div class="item key-plus" onclick="insert('+')">+</div>
+        <div class="item key-minus" onclick="insert('-')">-</div>
+        <div class="item key-multiplication" onclick="insert('*')">*</div>
+        <div class="item key-division" onclick="insert('/')">/</div>
+        <div class="item key-7" onclick="insert('7')">7</div>
+        <div class="item key-8" onclick="insert('8')">8</div>
+        <div class="item key-9" onclick="insert('9')">9</div>
+        <div class="item key-left-bracket" onclick="insert('(')">(</div>
+        <div class="item key-4" onclick="insert('4')">4</div>
+        <div class="item key-5" onclick="insert('5')">5</div>
+        <div class="item key-6" onclick="insert('6')">6</div>
+        <div class="item key-right-bracket" onclick="insert(')')">)</div>
+        <div class="item key-1" onclick="insert('1')">1</div>
+        <div class="item key-2" onclick="insert('2')">2</div>
+        <div class="item key-3" onclick="insert('3')">3</div>
         <div class="item equal" onclick="equal()">=</div>
         <div class="item zero" onclick="insert('0')">0</div>
-        <div class="item" onclick="insert('.')">.</div>
+        <div class="item key-dot" onclick="insert('.')">.</div>
     </div>
 
     <script src="script.js"></script>
