--- a/theory/index.html
+++ b/theory/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <script src="app.js"></script>
+   <title>JavaScript</title>
 </head>
 <body>
-   <h1>Learn JS</h1>
+   <h1 id="hello" class="heading">Learn JS</h1>
+
+   <h2 id="sub-hello" class="h2-class">This is heading 2</h2>
+
+   <h2><a target="_blank" href="https://developer.mozilla.org/ru/docs/Web/Events">Another h2</a></h2>
+
+<!--   <script src="08_DOM.js"></script>-->
 </body>
 </html>
