Fixes errors and bugs
Fix error with table, fix error with name
Some impromnets to designe table

--- a/js-course-Vladilen/simple-game/index.html
+++ b/js-course-Vladilen/simple-game/index.html
@@ -14,7 +14,7 @@
     <div class="app">
         <div class="app__header">
             <h1 id="time-header">Time for game: <span id="time">5.0</span></h1>
-            <h1 id="result-header" class="hide">Your score: <span id="result"></span></h1>
+            <h1 id="result-header" class="hide">Your score is: <span id="result"></span></h1>
         </div>
         <div class="app__content">
             <button class="btn" id="start">Start!</button>
@@ -24,7 +24,7 @@
         <div class="app__footer">
             <div class="input">
                 <label for="game-time">Time for game, (sec)</label>
-                <input type="number" id="game-time" min="5" step="1" value="5">
+                <input type="number" id="game-time" min="5" step="1" value="5" max="20">
             </div>
         </div>
     </div>
